update config toml

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://researcher-indicate-72055/"
+baseurl = "https://tekker.solutions/"
 languageCode = "en-us"
 title = "Tekker"
 truncated = true
