change u changerl endpoin o

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://tekker.solutions/"
+baseurl = "https://www.tekker.solutions/"
 languageCode = "en-us"
 title = "Tekker"
 truncated = true
